--- a/python_back_end/Dockerfile
+++ b/python_back_end/Dockerfile
@@ -1,22 +1,27 @@
 ############################
-# 🐳 Base with CUDA libs
+# 🐳 Podman-compatible single-stage build
 ############################
-FROM nvidia/cuda:12.4.1-runtime-ubuntu22.04
+FROM docker.io/nvidia/cuda:12.4.1-runtime-ubuntu22.04
 
 ############################
 # 🐧 OS packages
 ############################
 RUN apt-get update && apt-get install -y \
   build-essential curl libgl1 ffmpeg tesseract-ocr tesseract-ocr-eng \
-  python3 python3-pip \
-  && rm -rf /var/lib/apt/lists/*
+  python3 python3-pip python3-dev \
+  && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 ############################
-# 🐍 Python deps
+# 👤 Create non-root user early (Podman compatibility)
+############################
+RUN useradd -m -u 1001 -s /bin/bash appuser
+
+############################
+# 🐍 Python deps (as root, then switch to appuser)
 ############################
 COPY requirements.txt .
 
-# Multi-stage pip installation with retry mechanism and dependency resolution
+# Upgrade pip and install build dependencies
 RUN pip install --no-cache-dir --upgrade pip setuptools wheel
 
 # Install build dependencies for chatterbox-tts (pkuseg needs numpy pre-installed)
@@ -41,44 +46,35 @@ COPY install_deps.py .
 # Install remaining requirements using robust Python script with fallback
 RUN python3 install_deps.py || \
   (echo "Python script failed, falling back to traditional method..." && \
-  pip install --no-cache-dir -r requirements_no_torch.txt && \
-  pip install --no-cache-dir -r requirements_no_torch.txt)  
+  pip install --no-cache-dir -r requirements_no_torch.txt)
 
-# Add this section after your OS packages installation
-############################
-# 👤 Create non-root user
-############################
-RUN useradd -m -u 1001 -s /bin/bash appuser
-WORKDIR /app
-USER appuser
+# Clean up build dependencies and caches to reduce image size
+RUN pip cache purge && \
+  rm -rf /tmp/* /var/tmp/* && \
+  find /usr/local/lib/python3.* -name '*.pyc' -delete && \
+  find /usr/local/lib/python3.* -name '__pycache__' -type d -exec rm -rf {} + 2>/dev/null || true
 
 ############################
-# 📦 Copy app code
+# 📦 Copy app code and set permissions
 ############################
 WORKDIR /app
 COPY . .
 
-############################
-# 🎯 Whisper cache setup (models downloaded at runtime)
-############################
-USER root
-RUN mkdir -p /root/.cache/whisper && chown -R appuser:appuser /root/.cache
+# Set up cache directories (models downloaded at runtime, not build time)
+RUN mkdir -p /home/appuser/.cache/whisper /home/appuser/.cache/huggingface && \
+  chown -R appuser:appuser /home/appuser/.cache /app
+
+# Switch to non-root user for Podman compatibility
 USER appuser
 
 ############################
-# 🚀 Pre-warm models into Hugging Face cache (BuildKit required!)
-############################
-RUN --mount=type=cache,id=model-cache,target=/root/.cache \
-  set -eux; \
-  python3 -c 'import whisper'; \
-  python3 -c 'from chatterbox.tts import ChatterboxTTS; ChatterboxTTS.from_pretrained(device="cpu")'
-
-############################
-# 🌐 Expose + launch
+# 🌐 Environment and launch
 ############################
 EXPOSE 8000
 ENV PYTHONPATH=/app
-ENV TRANSFORMERS_CACHE=/root/.cache/huggingface
+ENV TRANSFORMERS_CACHE=/home/appuser/.cache/huggingface
+ENV HOME=/home/appuser
 
+# NOTE: Models now download at runtime instead of build time to save space
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
