--- a/front_end/jfrontend/Dockerfile
+++ b/front_end/jfrontend/Dockerfile
@@ -2,20 +2,53 @@
 FROM node:20-alpine AS deps
 WORKDIR /app
 
+# Copy package files
+COPY package.json package-lock.json* pnpm-lock.yaml* ./
+
+# Install dependencies with optimizations
+RUN \
+  if [ -f package-lock.json ]; then \
+    npm ci --only=production && \
+    npm cache clean --force; \
+  elif [ -f pnpm-lock.yaml ]; then \
+    npm install -g pnpm && \
+    pnpm install --frozen-lockfile --prod && \
+    pnpm store prune; \
+  else \
+    npm install --only=production && \
+    npm cache clean --force; \
+  fi
+
+# Install dev dependencies in separate stage for building
+FROM node:20-alpine AS deps-dev
+WORKDIR /app
+
 COPY package.json package-lock.json* pnpm-lock.yaml* ./
 
 RUN \
-  if [ -f package-lock.json ]; then npm ci; \
+  if [ -f package-lock.json ]; then \
+    npm ci && \
+    npm cache clean --force; \
   elif [ -f pnpm-lock.yaml ]; then \
-    npm install -g pnpm && pnpm install --frozen-lockfile; \
-  else npm install; fi
+    npm install -g pnpm && \
+    pnpm install --frozen-lockfile && \
+    pnpm store prune; \
+  else \
+    npm install && \
+    npm cache clean --force; \
+  fi
 
 # 2. Build app
 FROM node:20-alpine AS builder
 WORKDIR /app
 
-COPY --from=deps /app/node_modules ./node_modules
+# Copy dev dependencies for building
+COPY --from=deps-dev /app/node_modules ./node_modules
 COPY . .
+
+# Build the application
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN npm run build
 
@@ -23,18 +56,36 @@ RUN npm run build
 FROM node:20-alpine AS runner
 WORKDIR /app
 
-# Optional: reduce image size
+# Create non-root user for security
+RUN addgroup --system --gid 1001 nodejs && \
+    adduser --system --uid 1001 nextjs
+
+# Set environment variables
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
 
-# Copy from builder
-COPY --from=builder /app/.next .next
+# Copy only production dependencies
+COPY --from=deps /app/node_modules ./node_modules
+
+# Copy built application
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/node_modules ./node_modules
+
+# Copy package.json for start script
 COPY --from=builder /app/package.json ./package.json
-# updated
+
+# Create .next directory and set permissions
+RUN mkdir .next && chown nextjs:nodejs .next
+
+# Switch to non-root user
+USER nextjs
 
 EXPOSE 3000
 
-CMD ["npm", "run", "start", "--", "-p", "3000"]
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
+
+# Use node directly for better performance
+CMD ["node", "server.js"]
 
