--- a/front_end/jfrontend/Dockerfile
+++ b/front_end/jfrontend/Dockerfile
@@ -75,8 +75,8 @@ COPY --from=builder /app/public ./public
 # Copy package.json for start script
 COPY --from=builder /app/package.json ./package.json
 
-# Create .next directory and set permissions
-RUN mkdir .next && chown nextjs:nodejs .next
+# Set permissions for .next directory (already exists from standalone build)
+RUN chown -R nextjs:nodejs .next
 
 # Switch to non-root user
 USER nextjs
