--- a/k8s-manifests/base/nginx-configmap.yaml
+++ b/k8s-manifests/base/nginx-configmap.yaml
@@ -34,13 +34,18 @@ data:
                 proxy_set_header X-Forwarded-Proto $scheme;
             }
 
-            # API routes - proxy to backend
+            # API routes - proxy to backend (preserve /api/ path)
             location /api/ {
-                proxy_pass http://backend;
+                proxy_pass http://backend/api/;
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+
+                # Timeouts for long-running requests
+                proxy_connect_timeout 300s;
+                proxy_send_timeout 300s;
+                proxy_read_timeout 300s;
 
                 # Handle CORS
                 add_header Access-Control-Allow-Origin *;
