--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ k8s-manifests/flux-system/*-credentials.yaml
 flux-system-key*
 id_rsa*
 id_ed25519*
+id_ed
+id_ed.pub
+f
 
 # GitHub/GitLab tokens and webhooks
 .github-token
